# bolthands

./: CLAUDE.md  pyproject.toml
data/: __init__.py  mixer.py  pipeline.py  validator.py
data/converters/: __init__.py  base.py  glaive.py  hermes.py  nemotron.py  xlam.py
data/generators/: __init__.py  arr.py  base.py  comfyui.py  cross_domain.py  dashboard.py  flipper.py  llm_mgmt.py  mantella.py  memu.py  music.py  openclaw.py  plex.py  rvc.py  steam.py  systemd.py  tailscale.py  tts.py  windows.py
data/schemas/: arr.json  comfyui.json  core.json  dashboard.json  flipper.json  llm.json  mantella.json  memu.json  music.json  openclaw.json  plex.json  rvc.json  steam.json  systemd.json  tailscale.json  tts.json  windows.json
docs/superpowers/plans/: 2026-03-20-agent-backend.md  2026-03-20-frontend-ide.md
docs/superpowers/specs/: 2026-03-19-bolthands-9b-training-pipeline-design.md  2026-03-20-agent-backend-design.md  2026-03-20-context-management-design.md  2026-03-20-frontend-ide-design.md
eval/: cross_domain.py  regression.py  tool_accuracy.py
eval/fixtures/: cross_domain.jsonl  regression.jsonl  tool_accuracy.jsonl
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: entry.server.tsx  root.tsx
research/: bolt-architecture.md  context-management.md  custom-9b-all-skills.md  custom-model-training.md  existing-loras-and-finetunes.md  openhands-architecture.md  openhands-original-plan.md  unsloth-cli-training.md
src/bolthands/: config.py
tests/: conftest.py  test_context.py  test_controller.py  test_events.py  test_generators.py  test_mixer.py  test_parser.py  test_server.py  test_tools.py  test_validator.py
training/: config.yaml  export.sh  speed_test.py  test_memu.py  train.sh  train_direct.py  train_watchdog.sh
(+52 files in other folders)
