[project]
name = "bolthands"
version = "0.1.0"
description = "BoltHands 9B: All-purpose Qwen 3.5 9B fine-tune training pipeline"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
train = [
    "unsloth",
    "trl",
    "peft",
    "accelerate",
    "bitsandbytes",
    "torch",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
bolthands = "bolthands.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
